--- a/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
+++ b/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
@@ -110,8 +110,6 @@ RUN ck compile program:image-classification-tflite
 # Reduce the image size by removing the TF source.
 #RUN rm -rf `ck locate env --tags=lib,tensorflow-lite,tensorflow-static,v1.13.1`/src
 
-ENTRYPOINT ["/bin/bash", "-c"]
-
 # This command spawns the server in the background (daemon) mode, while
 # also brings up an interactive shell in the same container.
-CMD daemonize -o ${HOME}/ck_server.out -e ${HOME}/ck_server.err ck display dashboard --scenario=mlperf.mobilenets --host=0.0.0.0 --wfe_host=localhost --wfe_port=3355 && /bin/bash
+CMD daemonize -o ${HOME}/ck_server.out -e ${HOME}/ck_server.err `which ck` display dashboard --scenario=mlperf.mobilenets --host=0.0.0.0 --wfe_host=localhost --wfe_port=3355 && /bin/bash
