--- a/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
+++ b/docker/image-classification-tflite.ubuntu-18.04/Dockerfile.dashboard
@@ -2,18 +2,27 @@ FROM ubuntu:18.04
 
 LABEL maintainer="Anton Lokhmotov <anton@dividiti.com>"
 
+# Use the Bash shell.
 SHELL ["/bin/bash", "-c"]
+
+# Allow stepping into the Bash shell interactively. FIXME: Interferes with the dashboard?
+#ENTRYPOINT ["/bin/bash", "-c"]
 
 # Install known system dependencies and immediately clean up to make the image smaller.
 # CK needs: git, wget, zip.
 # TF needs: curl.
+# Running the dashboard in the background needs: daemonize.
 RUN apt update -y \
  && apt install -y apt-utils \
  && apt upgrade -y \
  && apt install -y \
-        git wget zip libz-dev curl vim daemonize \
+        git wget zip libz-dev curl vim \
+        daemonize \
         python3 python3-pip \
  && apt clean
+
+# Upgrade pip.
+RUN python3 -m pip install --upgrade pip
 
 # Create non-root user.
 RUN useradd --create-home --user-group --shell /bin/bash dvdt
@@ -115,4 +124,7 @@ RUN ${CK_PYTHON} -m pip install pandas --user
 
 # This command spawns the server in the background (daemon) mode, while
 # also brings up an interactive shell in the same container.
-CMD daemonize -o ${HOME}/ck_server.out -e ${HOME}/ck_server.err `which ck` display dashboard --scenario=mlperf.mobilenets --host=0.0.0.0 --wfe_host=localhost --wfe_port=3355 && /bin/bash
+CMD daemonize -o ${HOME}/ck_server.out -e ${HOME}/ck_server.err \
+`which ck` display dashboard --scenario=mlperf.mobilenets \
+--host=0.0.0.0 --wfe_host=localhost --wfe_port=3355 && \
+/bin/bash
