--- a/docker/image-classification-tflite.centos-7/Dockerfile.stable
+++ b/docker/image-classification-tflite.centos-7/Dockerfile.stable
@@ -9,14 +9,14 @@ SHELL ["/bin/bash", "-c"]
 ENTRYPOINT ["/bin/bash", "-c"]
 
 # Install known system dependencies and immediately clean up to make the image smaller.
-# CK needs: git, zip, wget, unzip.
+# CK needs: git, wget, zip, unzip.
 # TF needs: curl.
 # Python 3 needs: open-ssl-devel, bzip2-devel, libffi-devel.
-RUN yum install -y \
-        sudo git vim \
-        wget which zip unzip \
-        gcc make patch gcc-c++ \
-        openssl-devel bzip2-devel libffi-devel \
+RUN yum upgrade -y\
+ && yum install -y\
+ make which patch gcc gcc-c++\
+ git wget zip unzip\
+ openssl-devel bzip2-devel libffi-devel\
  && yum clean all
 
 # Install Python 3.
@@ -30,10 +30,7 @@ RUN cd /usr/src \
  && cd /usr/src \
  && rm -rf Python-3.7.3*
 
-# Upgrade pip.
-RUN python3.7 -m pip install --upgrade pip
-
-# Create non-root user
+# Create non-root user.
 RUN useradd --create-home --user-group --shell /bin/bash dvdt
 USER dvdt:dvdt
 WORKDIR /home/dvdt
@@ -61,22 +58,19 @@ RUN ck pull repo:ck-mlperf
 # Use generic Linux settings with dummy frequency setting scripts.
 RUN ck detect platform.os --platform_init_uoa=generic-linux-dummy
 
-# Install Python dependencies.
-RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
-RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
-
-RUN ${CK_PYTHON} -m pip install numpy==1.16.3 --user && ck detect soft --tags=lib,python-package,numpy
-RUN ${CK_PYTHON} -m pip install scipy==1.2.1  --user && ck detect soft --tags=lib,python-package,scipy
-RUN ${CK_PYTHON} -m pip install pillow==6.0.0 --user && ck detect soft --tags=lib,python-package,pillow
-
-# Install C/C++ dependencies.
+# Detect C/C++ compiler (gcc).
 RUN ck detect soft:compiler.gcc --full_path=`which ${CK_CC}`
+# Install TFLite.
 RUN ck install package --tags=lib,tensorflow-lite,tensorflow-static,v1.13.1
 
-# Download and preprocess the first 500 images of the ImageNet 2012 validation dataset.
-RUN ck install package --tags=dataset,imagenet,aux
-RUN ck install package --tags=dataset,imagenet,val,original,min --no_tags=resized
-RUN ck install package --tags=dataset,imagenet,val,preprocessed
+# Detect Python.
+RUN ck detect soft:compiler.python --full_path=`which ${CK_PYTHON}`
+# Install the latest Python package installer (pip).
+RUN ${CK_PYTHON} -m pip install --ignore-installed pip setuptools --user
+# Install Python dependencies.
+RUN ${CK_PYTHON} -m pip install numpy==1.16.4 --user && ck detect soft --tags=lib,python-package,numpy
+RUN ${CK_PYTHON} -m pip install scipy==1.2.1  --user && ck detect soft --tags=lib,python-package,scipy
+RUN ${CK_PYTHON} -m pip install pillow==6.0.0 --user && ck detect soft --tags=lib,python-package,pillow
 
 # Download the MobileNet TF/TFLite models (non-quantized and quantized).
 # https://github.com/mlperf/inference/blob/master/edge/object_classification/mobilenets/tflite/README.md#install-the-mobilenet-models-for-tflite
@@ -87,10 +81,16 @@ RUN ck install package --tags=image-classification,model,tf,tflite,mlperf,mobile
 RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,downloaded,with-argmax
 RUN ck install package --tags=image-classification,model,tflite,mlperf,resnet,downloaded,no-argmax
 
+# Download and preprocess the first 500 images of the ImageNet 2012 validation dataset.
+RUN ck install package --tags=dataset,imagenet,aux
+RUN ck install package --tags=dataset,imagenet,val,original,min --no_tags=resized
+RUN ck install package --tags=dataset,imagenet,val,preprocessed
+
 # Compile the Image Classification TFLite program.
 RUN ck compile program:image-classification-tflite
 
-# Run the Image Classification TFLite program with the non-quantized MobileNet model.
+# Run the Image Classification TFLite program
+# with the non-quantized MobileNet model twice.
 CMD ["ck run program:image-classification-tflite \
 --dep_add_tags.weights=mobilenet,non-quantized \
 --env.CK_BATCH_COUNT=2"]
