--- a/docker/object-detection-tf-py.debian-9/Dockerfile
+++ b/docker/object-detection-tf-py.debian-9/Dockerfile
@@ -78,16 +78,17 @@ RUN ck install package --tags=tool,coco,api
 
 # Install TF.
 RUN ck install package:lib-tensorflow-1.13.1-cpu
-# Download the SSD-MobileNet TF models (non-quantized and quantized).
-RUN ck install package --tags=model,tf,object-detection,mlperf,ssd-mobilenet,non-quantized
-RUN ck install package --tags=model,tf,object-detection,mlperf,ssd-mobilenet,quantized,finetuned
 
-# Download the COCO 2017 validation dataset (5,000 images) to the default path;
+# Download the COCO 2017 validation dataset (5,000 images) to the default path.
 RUN echo | ck install package --tags=object-detection,dataset,coco.2017,val,original,full\
  && ck virtual env --tags=object-detection,dataset,coco.2017,val,original,full --shell_cmd=\
 'rm $CK_ENV_DATASET_COCO_LABELS_DIR/*train2017.json'
 
+# Download the SSD-MobileNet TF models (non-quantized and quantized).
+RUN ck install package --tags=model,tf,object-detection,mlperf,ssd-mobilenet,non-quantized
+RUN ck install package --tags=model,tf,object-detection,mlperf,ssd-mobilenet,quantized,finetuned
+
 # Run the Object Detection TF-Python program
 # with the non-quantized SSD-MobileNet model 
 # on the first 50 images of the COCO 2017 validation dataset.
-CMD ["ck run program:object-detection-tf-py --env.CK_BATCH_COUNT=50 --dep_add_tags.weights=non-quantized"]
+CMD ["ck run program:object-detection-tf-py --env.CK_BATCH_COUNT=50 --dep_add_tags.weights=ssd-mobilenet,non-quantized"]
