--- a/.travis.yml
+++ b/.travis.yml
@@ -64,15 +64,15 @@ install:
     - echo "$CK_PLATFORM_NAME" | ck detect platform.os --update_platform_init       # set the platform to generic-linux (1) or generic-macos (2)
     - ck detect soft:compiler.python --full_path=`which ${PYTHON_EXE}`              # pick the one Travis has set for us in the PATH
     - ck install package --tags=lib,python-package,numpy                            # avoid detection by force-installing the package
-    - ck install package --tags=lib,python-package,scipy --force_version=1.2.1      # later versions no longer recognize pillow
+    - ck install package --tags=lib,python-package,scipy                            # avoid detection by force-installing the package
     - ck install package --tags=lib,python-package,pillow                           # avoid detection by force-installing the package
     - ck install package:lib-tensorflow-1.13.1-cpu                                  # avoid manual selection
     - ck install package:imagenet-2012-val-min                                      # avoid manual selection
-    - ck install package --tags=dataset,imagenet,preprocessed,first.20              # we only need a short preprocessed subset
+    - ck install package --tags=dataset,imagenet,preprocessed,using-scipy-PIL,first.20      # we only need a short preprocessed subset
     - ck install package --tags=model,image-classification,onnx,mobilenet,nchw,downloaded   # MobileNet ONNX model, downloaded
-    - ck install package --tags=model,image-classification,onnx,mobilenet,nhwc,converted    # MobileNet ONNX model, converted from TF, in NHWC
-    - ck install package --tags=model,image-classification,onnx,resnet,nchw,converted       # ResNet50 ONNX model, converted from TF, in NCHW
-    - ck install package --tags=model,image-classification,onnx,resnet,nhwc,converted       # ResNet50 ONNX model, converted from TF, in NHWC
+    - ck install package --tags=model,onnx,mobilenet,nhwc,converted                 # MobileNet ONNX model, converted from TF, in NHWC
+    - ck install package --tags=model,onnx,resnet,nchw,converted                    # ResNet50 ONNX model, converted from TF, in NCHW
+    - ck install package --tags=model,onnx,resnet,nhwc,converted                    # ResNet50 ONNX model, converted from TF, in NHWC
 
 script:
     - ck show env                                                                   # show everything that has been detected or installed
