--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,12 @@ before_install:
                 brew reinstall python\@2 || brew link --overwrite python\@2     # install and link python2 and pip2 to /usr/local/bin
                 export PATH=/usr/local/opt/python\@2/bin:$PATH
                 export PYTHON_EXE=python
+            elif [ "$WANTED_PYTHON_VERSION" == "3.6" ]; then
+                curl https://www.python.org/ftp/python/3.6.8/python-3.6.8-macosx10.9.pkg -s -o /tmp/python.pkg
+                installer -pkg /tmp/python.pkg -target /
+                ls -l /Library/Frameworks/Python.framework/Versions/3.6/bin
+                export PATH=/Library/Frameworks/Python.framework/Versions/3.6/bin:$PATH
+                export PYTHON_EXE=python3
             else
                 brew unlink python
                 brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/f2a764ef944b1080be64bd88dca9a1d80130c558/Formula/python.rb --ignore-dependencies
