--- a/.travis.yml
+++ b/.travis.yml
@@ -29,19 +29,20 @@ addons:
 before_install:
     - |
         if [ $TRAVIS_OS_NAME == "osx" ]; then
-            brew update                                                         # this swaps python versions and makes 3 the default one
 
             if [ "$WANTED_PYTHON_VERSION" == "2.7" ]; then
+                brew update                                                     # this swaps python versions and makes 3 the default one
                 brew reinstall python\@2 || brew link --overwrite python\@2     # install and link python2 and pip2 to /usr/local/bin
                 export PATH=/usr/local/opt/python\@2/bin:$PATH
                 export PYTHON_EXE=python
             elif [ "$WANTED_PYTHON_VERSION" == "3.6" ]; then
                 curl https://www.python.org/ftp/python/3.6.8/python-3.6.8-macosx10.9.pkg -s -o /tmp/python.pkg
-                installer -pkg /tmp/python.pkg -target /
+                sudo installer -pkg /tmp/python.pkg -target /
                 ls -l /Library/Frameworks/Python.framework/Versions/3.6/bin
                 export PATH=/Library/Frameworks/Python.framework/Versions/3.6/bin:$PATH
                 export PYTHON_EXE=python3
             else
+                brew update                                                     # this swaps python versions and makes 3 the default one
                 brew unlink python
                 brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/f2a764ef944b1080be64bd88dca9a1d80130c558/Formula/python.rb --ignore-dependencies
                 brew switch python 3.6.5_1
