--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ install:
     - ck install package --tags=lib,python-package,pillow                           # avoid detection by force-installing the package
     - ck install package:lib-tensorflow-1.13.1-cpu                                  # avoid manual selection
     - ck install package:imagenet-2012-val-min                                      # avoid manual selection
-    - ck install package --tags=dataset,imagenet,preprocessed,using-scipy-PIL,first.20      # we only need a short preprocessed subset
+    - ck install package --tags=dataset,imagenet,preprocessed,using-pillow,first.20 # we only need a short preprocessed subset
     - ck install package --tags=model,image-classification,onnx,mobilenet,nchw,downloaded   # MobileNet ONNX model, downloaded
     - ck install package --tags=model,onnx,mobilenet,nhwc,converted                 # MobileNet ONNX model, converted from TF, in NHWC
     - ck install package --tags=model,onnx,resnet,nchw,converted                    # ResNet50 ONNX model, converted from TF, in NCHW
